; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_stk-webcam.c_stk_v4l_vm_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_stk-webcam.c_stk_v4l_vm_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_area_struct = type { %struct.stk_sio_buffer* }
%struct.stk_sio_buffer = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@V4L2_BUF_FLAG_MAPPED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vm_area_struct*)* @stk_v4l_vm_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stk_v4l_vm_close(%struct.vm_area_struct* %0) #0 {
  %2 = alloca %struct.vm_area_struct*, align 8
  %3 = alloca %struct.stk_sio_buffer*, align 8
  store %struct.vm_area_struct* %0, %struct.vm_area_struct** %2, align 8
  %4 = load %struct.vm_area_struct*, %struct.vm_area_struct** %2, align 8
  %5 = getelementptr inbounds %struct.vm_area_struct, %struct.vm_area_struct* %4, i32 0, i32 0
  %6 = load %struct.stk_sio_buffer*, %struct.stk_sio_buffer** %5, align 8
  store %struct.stk_sio_buffer* %6, %struct.stk_sio_buffer** %3, align 8
  %7 = load %struct.stk_sio_buffer*, %struct.stk_sio_buffer** %3, align 8
  %8 = getelementptr inbounds %struct.stk_sio_buffer, %struct.stk_sio_buffer* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = add nsw i64 %9, -1
  store i64 %10, i64* %8, align 8
  %11 = load %struct.stk_sio_buffer*, %struct.stk_sio_buffer** %3, align 8
  %12 = getelementptr inbounds %struct.stk_sio_buffer, %struct.stk_sio_buffer* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %1
  %16 = load i32, i32* @V4L2_BUF_FLAG_MAPPED, align 4
  %17 = xor i32 %16, -1
  %18 = load %struct.stk_sio_buffer*, %struct.stk_sio_buffer** %3, align 8
  %19 = getelementptr inbounds %struct.stk_sio_buffer, %struct.stk_sio_buffer* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = and i32 %21, %17
  store i32 %22, i32* %20, align 8
  br label %23

23:                                               ; preds = %15, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
